--- a/grade3.html
+++ b/grade3.html
@@ -27,7 +27,7 @@
    
 
  <li> <a href="grade3.html">Home</a></li>    
-<li> <a href="#">Account</a></li>    
+<li> <a href="g3acc.html">Account</a></li>    
 <li> <a href="#">Contact Us</a></li>
     
     </ul>
